files/keptn/keptn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keptn-ingress
  annotations:
    cert-manager.io/cluster-issuer: issuer.placeholder-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - "domain.placeholder"
    secretName: keptn-tls
  rules:
    - host: "domain.placeholder"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-nginx
                port: 
                  number: 80
